# OC_DS_P7_dashboard

./: Procfile  README.md  balanced_lgbm_model.sav  balanced_log_model.sav  client_df_save.py  code_API.py  code_client_csv.py  code_dashboard.py  code_modelisation.ipynb  lightgbm_stratkf.csv  logistic_kf.csv  logistic_stratkf.csv  outputs.txt  pyproject.toml  requirements.txt  rfc_kf.csv  rfc_stratkf.csv  submission_kernel02.csv
models/: balanced_lgbm_model.sav
