[tool.poetry]
name = "ds_p7"
version = "0.1.0"
description = ""
authors = ["Georges SEMEDO CABRAL <semedocabralg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^1.4.3"
sklearn = "^0.0"
lightgbm = "^3.3.2"
plotly = "^5.9.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
