[tool.poetry]
name = "ds_p7"
version = "0.1.0"
description = ""
authors = ["Georges SEMEDO CABRAL <semedocabralg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^1.4.3"
sklearn = "^0.0"
lightgbm = "^3.3.2"
plotly = "^5.9.0"
kaleido = "0.2.1"
imblearn = "^0.0"
lime = "^0.2.0"
llvmlite = "^0.39.0"
numpy = "1.22"
numba = "0.56"
shap = "^0.41.0"
bayesian-optimization = "^1.2.0"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
dash = "^2.6.1"
requests = "^2.28.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
